--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,9 @@ html{
     font-family: 'Montserrat',Arial, Helvetica, sans-serif;
     font-size: 13px;
 }
+body{
+    overflow-x: hidden;
+}
 header{
     height: 100px;
     background-color: #000;
@@ -128,4 +131,42 @@ header{
 }
 .banner .pointer.active{
     background-color: #b28756;
+}
+
+.default{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.default .section-title,
+.default .section-desc{
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+}
+.default .section-title{
+    font-size: 1.53rem;    
+}
+.default .section-desc{
+    font-size: 0.92rem;
+    color: #ccc;
+    margin-top: 10px;    
+    margin-bottom: 40px;    
+}
+.default .section-body{
+    margin: auto;
+    max-width: 1140px;  
+    min-height: 100px;
+    background-color: #ccc;
+}
+.default.light{
+    background-color: #f7f7f7;
+}
+.default.light .section-title{
+    color: #000;
+}
+.default.dark{
+    background-color: #000;
+}
+.default.dark .section-title{
+    color: #fff;
 }
