--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,19 @@ header{
     color: #ccc;
 }
 
+.button{
+    display: inline-block;
+    background-color: #b28756;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;    
+    text-decoration: none;
+    padding: 10px 30px;
+    font-size: 0.8rem;
+    margin-top: 30px;
+    border-radius: 20px;
+}
+
 .banner{
     height:calc(100vh - 100px);
     background-color: #333;
@@ -97,18 +110,6 @@ header{
 .banner h2{
     text-transform: uppercase;
     margin-top: 20px;
-}
-.banner a{
-    display: block;
-    background-color: #b28756;
-    color: #fff;
-    font-weight: 600;
-    text-transform: uppercase;    
-    text-decoration: none;
-    padding: 10px 30px;
-    font-size: 0.8rem;
-    margin-top: 30px;
-    border-radius: 20px;
 }
 .banner .sliders-pointers{
     width: 100vw;
@@ -154,19 +155,40 @@ header{
 }
 .default .section-body{
     margin: auto;
-    max-width: 1140px;  
-    min-height: 100px;
-    background-color: #ccc;
+    max-width: 1140px;     
 }
 .default.light{
     background-color: #f7f7f7;
 }
-.default.light .section-title{
+.default.light .section-title,
+.default.light .section-body{
     color: #000;
 }
 .default.dark{
     background-color: #000;
 }
-.default.dark .section-title{
+.default.dark .section-title,
+.default.dark .section-body{
     color: #fff;
+}
+/*CSS de áreas epecíficas
+*/
+.section-aboutus{
+    display: flex;
+}
+.section-aboutus--left{
+    flex: 1;
+}
+.section-aboutus--left p{
+    font-size: 1.07rem;
+    line-height: 25px;
+    text-align: justify;
+}
+.section-aboutus--right{
+    width: 520px;
+    text-align: center;
+}
+.section-aboutus--right img{
+    width: 470px;
+    box-shadow: 0px 5px 10px #333;
 }
