--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,3 +291,98 @@ header{
 .section-projects--photoarea:hover .section-projects--photoinfo{
     display: flex;
 }
+
+.bg-team{
+    background-image: url(../images/bg.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 0;
+}
+.section-team-area{
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 50px 0;
+}
+.section-team{
+    overflow: hidden;
+    max-width: 880px;
+    margin: auto;
+}
+.section-team .sliders{
+    width: 1000vw;
+    height: 100%;
+}
+.section-team .slide{
+    width: 280px;
+    height: 100%;
+    min-height: 300px;
+    display: inline-block;
+    background-color: #fff;
+    margin-right: 20px;
+}
+.section-team .slidearea{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    padding: 30px;
+}
+.section-team-area .sliders-pointers{
+    margin-top: 30px;
+    height: 20px;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section-team-area .pointer{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid #b28756;
+    background-color: transparent;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.section-team-area .pointer.active{
+    background-color: #b28756;
+}
+.section-team--avatar{
+    width: 150px;
+    height: auto;
+}
+.section-team--avatar img{
+    width: inherit;
+    height: inherit;
+}
+.section-team--name{
+    text-transform: uppercase;
+    font-size: 1.30rem;
+    font-weight: 600;
+    margin-top: 25px;
+}
+.section-team--role{
+    font-size: 1.07rem;
+    color: #999;
+    margin-top: 5px;
+
+}
+.section-team--social{
+    display: flex;
+    margin-top: 20px;
+
+}
+.section-team--social a{
+    display: inline-flex;
+    width: 25px;
+    height: 25px;
+    background-color: #ccc;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.section-team--social a:hover{
+    background-color: #b28756;
+}
