--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,7 @@ header{
     color: #fff;
 }
 /*CSS de áreas epecíficas*/
+/*About US*/
 .section-aboutus{
     display: flex;
 }
@@ -191,7 +192,7 @@ header{
     width: 470px;
     box-shadow: 0px 5px 10px #333;
 }
-
+/*Services*/
 .section-services{
     display: flex;
 }
@@ -216,7 +217,7 @@ header{
     margin-top: 10px;
     color: #999;
 }
-
+/*Projects*/
 .section-projects{
     display: flex;
     flex-direction: column;
@@ -291,7 +292,7 @@ header{
 .section-projects--photoarea:hover .section-projects--photoinfo{
     display: flex;
 }
-
+/*Team*/
 .bg-team{
     background-image: url(../images/bg.jpg);
     background-size: cover;
@@ -371,7 +372,6 @@ header{
 .section-team--social{
     display: flex;
     margin-top: 20px;
-
 }
 .section-team--social a{
     display: inline-flex;
@@ -385,4 +385,38 @@ header{
 }
 .section-team--social a:hover{
     background-color: #b28756;
+}
+/*Clients*/
+.section-clients{
+    overflow: hidden;
+    max-width: 730px;
+    margin: auto;
+}
+.section-clients .sliders{
+    width: 1000vw;
+    height: 100%;
+}
+.section-clients .sliders-pointers{
+    margin-top: 30px;
+    height: 20px;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section-clients .pointer{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid #b28756;
+    background-color: transparent;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.section-clients .pointer.active{
+    background-color: #b28756;
+}
+.section-clients .slide{
+    width: 100%;
+    background-color: red;
 }
