--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -824,3 +824,94 @@ header{
     width: 15px;
     height: auto;
 }
+/*Footer*/
+footer{
+    background-color: #000;
+    color: #fff;
+    height: 220px;
+}
+.footer-body{
+    margin: auto;
+    max-width: 1140px; 
+    display: flex;
+    justify-content: space-between;
+}
+.footer-iten{     
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    height: 170px;
+    margin-top: 20px;
+    width: 300px;     
+    text-align: center;
+}
+.footer-iten .social-medias{
+    display: flex;
+    height: 40px;    
+    width: inherit;
+}
+.footer-iten .social-media{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+    background-color: #555;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+.footer-iten .awax{
+    height: 30px;
+    position: relative;
+    bottom: -110px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-align: left;
+}
+.footer-iten--body{    
+    background-color: #555;   
+    height: inherit; 
+    padding: 30px;
+}
+.footer-iten form{
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.footer-iten input{
+    background-color: transparent;
+    border: none;
+    border-bottom: solid 1px #999;
+    padding: 3px;
+    color: #999;
+    margin-bottom: -15px;
+}
+.footer-iten input:focus{
+    outline: none;
+}
+.footer-iten input::-webkit-input-placeholder{
+    color: #999;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 5px;
+}
+.footer-iten input::-moz-placeholder{
+    color: #999;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 5px;
+}
+.footer-iten textarea::-moz-placeholder{
+    color: #999;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 5px;
+}
+.footer-iten .button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+}
