--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,9 @@ header{
     display: flex;
     justify-content: flex-end;
 }
+.menu-opener{
+    display: none;
+}
 .menu ul,
 .menu li{
     list-style: none;
@@ -419,7 +422,8 @@ header{
     background-color: #b28756;
 }
 .section-clients .slide{
-    width: 700px;
+    width: 100vw;
+    max-width: 700px;
 }
 .section-clients .slidearea{
     display: flex;
@@ -474,7 +478,7 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: center; 
-    margin-bottom: 50px;   
+    margin-bottom: 50px;
 }
 .section-price--plan{
     display: flex;
@@ -530,12 +534,13 @@ header{
     background-color: #fff;
     padding-top: 50px;
     padding-bottom: 50px;    
-    text-align: center;    
-
+    text-align: center;
+    overflow: hidden;
 }
 .section-price--details .sliders{
     width: 1000vw;
-    height: 100%;
+    height: 100%;  
+
 }
 .section-price--details .sliders-pointers{
     margin-top: 30px;
@@ -558,9 +563,9 @@ header{
     background-color: #b28756;
 }
 .section-price--details .slide{
-    width: 1140px;
+    width: 100vw;    
     padding-bottom: 20px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);       
 }
 .section-price--details .slidearea{
     display: flex;
@@ -568,7 +573,7 @@ header{
     height: 100%;
     align-items: center;
     justify-content: center;    
-    color: #000;
+    color: #000;    
 }
 .section-price--details .slidearea .content{
     display: flex;
@@ -619,12 +624,19 @@ header{
     margin-bottom: 60px;
     justify-content: center;
 }
+
 .section-facts .fact{
+    flex: 1;
+    text-align: center;    
+    padding: 15px;
+    min-height: 190px;
+    /*
     width: 220px;
     height: 190px;
     padding: 5px;
     margin-right: 80px;    
-    text-align: center;    
+    text-align: center;
+    */    
 }
 .section-facts .fact:last-child{
     margin-right: 0;
@@ -656,7 +668,7 @@ header{
 }
 .section-tell-about-us {
     background-color: #fff;
-    height: 50px;
+    height: 50px;    
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .section-tell-about-us .social-media{
@@ -665,6 +677,19 @@ header{
     flex-direction: row;
     justify-content: center;
     align-items: center;    
+}
+.section-tell-about-us .title{    
+    text-transform: uppercase;
+    text-align: center;    
+    color: #333;
+    font-weight: 600;    
+    margin-bottom: 10px;
+    display: none;
+}
+.section-tell-about-us .social-media .title-2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 .section-tell-about-us .social-media .share{
     margin-right: 8px;
@@ -707,8 +732,9 @@ header{
 .section-contact-us .contact{
     display: flex;
     flex-direction: column;
+    width: inherit;
     max-width: 600px;    
-    margin: auto;    
+    margin: auto;      
 }
 .section-contact-us .contact form{
     margin: auto;
@@ -828,13 +854,14 @@ header{
 footer{
     background-color: #000;
     color: #fff;
-    height: 220px;
+    height: 250px;
 }
 .footer-body{
     margin: auto;
     max-width: 1140px; 
     display: flex;
     justify-content: space-between;
+    padding-bottom: 20px;
 }
 .footer-iten{     
     display: flex;
@@ -849,16 +876,23 @@ footer{
     display: flex;
     height: 40px;    
     width: inherit;
+    justify-content: center;
 }
 .footer-iten .social-media{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 20px;
+    margin-left: 20px;    
     background-color: #555;
     width: 30px;
     height: 30px;
     border-radius: 50%;
+}
+.footer-iten.awax{
+    height: 50px;    
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: none;   
 }
 .footer-iten .awax{
     height: 30px;
@@ -914,4 +948,362 @@ footer{
     justify-content: center;
     align-items: center;
     width: 100px;
+}
+/*Responsividade*/
+@media (min-width:600px) and (max-width:800px){
+    .logo{        
+        margin-left: 30px;
+    }
+    .menu-opener{
+        display: block;
+        width: 45px;
+        margin-right: 30px;
+    }
+    nav{
+        position: absolute;
+        z-index: 99;
+        background-color: rgba(0, 0, 0, 0.9);
+        width: 70vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul{
+        flex-direction: column;
+    }
+    .menu li a{
+        font-weight: bold;
+        font-size: 2rem;
+        height: 50px;
+        margin-left: 50px;
+        border: 0;
+    }
+    .menu li.active a{
+        border: 0;
+        color: #b28756;
+    }
+
+    .section-aboutus{
+        flex-direction: column;
+    }
+    .section-aboutus--left{
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    .section-aboutus--right{
+        width: auto;
+    }
+    .section-services{
+        flex-wrap: wrap;        
+    }
+    .section-service{
+        min-width: 50%;
+        margin-bottom: 30px;
+    }
+    .section-services:first-child{
+        border-left: 0;
+    }
+    .section-team{
+        max-width: 580px;
+    }
+    .section-clients .slidearea{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .section-clients--ourclients .clients img{
+        height: 30px;
+    }
+    .section-price--plans{
+        flex-wrap: wrap;
+    }
+    .section-price--plan{       
+        margin-bottom: 20px;
+    }
+    .section-price--details .slidearea .content{
+        flex-direction: column;
+    }
+    .section-price--details .image{
+        margin-bottom: 20px;
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+    .section-price--details .features{
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+    .section-tell-about-us{
+        height: 85px;
+        padding-top: 10px;
+    }
+    .section-tell-about-us .title{
+        display: block;
+    }
+    .section-tell-about-us .social-media .twitter{
+        margin-left: 0;
+    }
+    .section-tell-about-us .social-media .title-2{
+        display: none;
+    }
+    .section-contact-us .contact form{
+        flex-direction: column;                
+    }
+    .section-contact-us .contact .fields{
+        width: 400px;
+    }
+    .section-contact-us .contact #name, 
+    .section-contact-us .contact #email,
+    .section-contact-us .contact #subject,
+    .section-contact-us .contact #message{
+    width: inherit;            
+    }
+    .section-contact-us .contact .fields textarea{
+        height: 70px;
+    }
+   /* Utilizar no Mobile
+   .section-price--plans{
+        flex-direction: column;        
+    }
+    .section-price--plan{
+        margin: auto;
+        margin-bottom: 20px;
+    }
+    .section-price--plans:last-child{
+        margin-bottom: 0;
+    }
+    */
+    .section-facts{
+        flex-wrap: wrap;
+    }
+    .fact{
+        min-width: 50%;
+        margin-bottom: 30px;
+    }
+    .section-map{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .section-map--area{
+        width: auto;
+    }
+    .section-map--info{
+        width: auto;
+    }
+    .section-map--info-item{
+        margin-bottom: 20px;
+    }
+    .section-map--info-item:last-child{
+        margin-bottom: 0;
+    }
+    .footer-body{
+        flex-direction: column;
+        background-color: #000;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-body .footer-iten.form{
+        order: -3;
+    }
+    .footer-body .footer-iten.social{
+        height: 50px;
+    }
+    .footer-iten .awax{
+        display: none;
+    }
+    .footer-iten.awax{
+        display: block;
+    }
+}
+@media (max-width:600px){
+    .logo{        
+        margin-left: 30px;
+    }
+    .menu-opener{
+        display: block;
+        width: 45px;
+        margin-right: 30px;
+    }
+    nav{
+        display: none;
+        position: absolute;
+        z-index: 99;
+        background-color: rgba(0, 0, 0, 0.9);
+        width: 80vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul{
+        flex-direction: column;
+    }
+    .menu li a{
+        font-weight: bold;
+        font-size: 1.53rem;
+        height: 40px;
+        margin-left: 30px;
+        border: 0;
+    }
+    .menu li.active a{
+        border: 0;
+        color: #b28756;
+    }
+    .banner h1{
+        font-size: 2.5rem;
+    }
+    .banner h2{
+        font-size: 1.5rem;
+    }
+    .section-aboutus{
+        flex-direction: column;
+    }
+    .section-aboutus--left{
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    .section-aboutus--right{
+        width: auto;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .section-aboutus--right img{
+        width: 100%;
+    }
+    .section-services{
+        flex-wrap: wrap;        
+    }
+    .section-service{
+        min-width: 100%;
+        margin-bottom: 30px;
+    }
+    .section-services:first-child{
+        border-left: 0;
+    }
+    .section-projects--filters{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .section-team{
+        max-width: 280px;
+    }
+    .section-clients .slidearea{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .section-clients--ourclients{
+        overflow: hidden;
+    }
+    .section-clients--ourclients .clients{
+        width: 100vw;                  
+    }
+    .section-clients--ourclients .clients:first-child{
+        margin-left: 40px;
+    }
+    .section-clients--ourclients .clients .client{
+        min-width: 50%;         
+    }
+    .section-price--plans{
+        flex-wrap: wrap;
+    }
+    .section-price--plan{       
+        margin-bottom: 20px;
+    }
+    .section-price--details .slidearea .content{
+        flex-direction: column;
+    }
+    .section-price--details .image{
+        margin-bottom: 20px;
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+    .section-price--details .image img{
+        width: 100%;
+    }
+    .section-price--details .features{
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+    .section-tell-about-us{
+        height: 85px;
+        padding-top: 10px;
+    }    
+    .section-tell-about-us .social-media .twitter,
+    .linkedin,
+    .facebook,
+    .googleplus,
+    .pinterest{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;    
+        margin-left: 10px;
+        margin-right: 3px;    
+}
+    .section-tell-about-us .title{
+        display: block;
+    }
+    .section-tell-about-us .social-media .twitter{
+        margin-left: 0;
+    }
+    .section-tell-about-us .social-media .title-2{
+        display: none;
+    }
+    .section-contact-us .contact form{
+        flex-direction: column;                
+    }
+    .section-contact-us .contact .fields{
+        width: 300px;
+    }
+    .section-contact-us .contact #name, 
+    .section-contact-us .contact #email,
+    .section-contact-us .contact #subject,
+    .section-contact-us .contact #message{
+    width: inherit;            
+    }
+    .section-contact-us .contact .fields textarea{
+        height: 70px;
+    }      
+    .section-facts{
+        flex-wrap: wrap;
+    }
+    .fact{
+        min-width: 100%;
+        margin-bottom: 30px;
+    }
+    .section-map{
+        padding: 0;
+        padding-bottom: 250px;
+    }
+    .section-map--area{
+        width: auto;
+    }
+    .section-map--info{
+        width: auto;
+    }
+    .section-map--info-item{
+        margin-bottom: 20px;
+    }
+    .section-map--info-item:last-child{
+        margin-bottom: 0;
+    }
+    .footer-body{
+        flex-direction: column;
+        background-color: #000;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-body .footer-iten.form{
+        order: -3;
+    }
+    .footer-body .footer-iten.social{
+        height: 50px;
+    }
+    .footer-iten .awax{
+        display: none;
+    }
+    .footer-iten.awax{
+        display: block;
+    }
 }
